# nebula

./: Cargo.toml  README.md
benches/: render_bench.rs
scenes/: cornell_box.json  features.json  showcase.json  spheres.json
shaders/: common.wgsl  trace.wgsl
src/: lib.rs  main.rs
src/accel/: aabb.rs  bvh.rs  mod.rs  packet.rs
src/camera/: mod.rs
src/geometry/: hit.rs  instance.rs  mesh.rs  mod.rs  quad.rs  sphere.rs  triangle.rs
src/integrator/: mod.rs  path.rs
src/material/: dielectric.rs  emissive.rs  lambertian.rs  metal.rs  mod.rs  scatter.rs  texture.rs  textured.rs
src/math/: mod.rs  ray.rs  simd.rs  transform.rs  vec3.rs  vec3x4.rs
src/output/: denoise.rs  mod.rs
src/render/: cpu.rs  gpu.rs  mod.rs
src/sampler/: mod.rs  rng.rs  sampling.rs
src/scene/: loader.rs  mod.rs  obj_loader.rs
src/texture/: checker.rs  mod.rs  noise.rs  solid.rs
src/volume/: heterogeneous.rs  homogeneous.rs  mod.rs  phase.rs
