[package]
name = "nebula"
version = "0.1.0"
edition = "2021"
description = "A physically-based path tracer with SIMD and GPU acceleration"
license = "MIT"
repository = "https://github.com/sudokatie/nebula"

[dependencies]
# Math (using our own Vec3 for learning, but glam for matrices)
glam = "0.29"

# Random number generation
rand = "0.8"
rand_xoshiro = "0.6"

# Parallel rendering
rayon = "1.10"

# Image output
image = "0.25"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Scene loading
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GPU compute (optional)
wgpu = { version = "23.0", optional = true }
pollster = { version = "0.4", optional = true }

[features]
default = []
gpu = ["wgpu", "pollster"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "render_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
